#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(image2000,2dx)
AC_CONFIG_SRCDIR([lib/2dx_conv.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX([icpc g++])
AC_PROG_CC([icc gcc])
AC_PROG_FC([ifort gfortran])
AC_PROG_MAKE_SET
AC_PROG_INSTALL

# Checks for libraries
AC_MSG_CHECKING([Setting compiler flags for])
if test "$FC" = "ifort"; then
  FCFLAGS="-O3 -axN -w -132 -cxxlib"
  AC_MSG_RESULT([ifort])
else
  FCFLAGS="-O1 -ffixed-line-length-none -fno-second-underscore -fdollar-ok -ffast-math -w"
  AC_MSG_RESULT([gfortran])
	AC_CHECK_LIB([SystemStubs], [printf$LDBLStub],FCFLAGS="$FCFLAGS -dead_strip -static-libgcc")
fi

if test "$CXX" = "icpc"; then
  # CPPFLAGS="-O3 -axN -w -132 -cxxlib"
  CPPFLAGS="-axN -w -132 -cxxlib"
else
  # CPPFLAGS="-O1 -ffast-math" 
  CPPFLAGS="-ffast-math" 
	AC_CHECK_LIB([stdc++-static], [main],LIBS="$LIBS -lstdc++-static",AC_CHECK_LIB([stdc++], [main],LIBS="$LIBS -lstdc++"))
	AC_CHECK_LIB([SystemStubs], [printf$LDBLStub],CPPFLAGS="$CPPFLAGS -dead_strip -static-libgcc")
fi






# Checks for header files.
#AC_PATH_X
#AC_HEADER_STDC
#AC_CHECK_HEADERS([float.h limits.h malloc.h stddef.h stdlib.h])
#AC_CHECK_HEADERS([string.h strings.h sys/file.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_HEADER_STDBOOL
#AC_C_CONST
#AC_C_INLINE
#AC_TYPE_MODE_T
#AC_TYPE_OFF_T
#AC_TYPE_SIZE_T
#AC_STRUCT_TM

# Checks for library functions.
#AC_FUNC_MALLOC
#AC_FUNC_REALLOC
#AC_FUNC_STAT
#AC_CHECK_FUNCS([memset mkdir pow putenv setenv sqrt strchr strerror])

AC_SUBST(SUBDIRS,["source source/2dx_getlat source/ctf source/peaksearch source/endianness source/periodogram source/maximum_likelihood lib"])
AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 source/Makefile
                 source/2dx_getlat/Makefile
                 source/ctf/Makefile
                 source/maximum_likelihood/Makefile
                 source/peaksearch/Makefile
                 source/endianness/Makefile
                 source/periodogram/Makefile])
AC_OUTPUT
