############################################################################
# A 2dx CMakeLists.txt                                                  #
############################################################################
# The author was:                                                          #
# 2010 Marcel Arheit                                                       #
############################################################################
#
cmake_minimum_required(VERSION 2.6)

add_subdirectory(conf)
add_subdirectory(extentions)
add_subdirectory(mrcImage)
add_subdirectory(widgets)
